--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 	<body>	
 		<div class="container">
-			<h1>Let's start getting a little more fancy!</h1>
+			<h1>Let's start <span class="text-accent">getting a little</span> more fancy!</h1>
 			<img class="elephants" src="neil-and-zulma-scott-hjv3VO-jpnc-unsplash.jpg" alt="Elephants crossing a dirt road in the desert">
 			
 			<div class="cols">
