--- a/index.html
+++ b/index.html
@@ -9,7 +9,22 @@
 		<title>Document</title>
 	</head>
 
-	<body>	
+	<body>
+		<header>
+			<div>
+				<h2>Living the simple life</h2>
+				<p>A blog exploring minimalism in life</p>
+			</div>
+
+			<nav>
+				<ul>
+					<li><a href="home.html"></a>Home</li>
+					<li><a href="about.html"></a>About</li>
+					<li><a href="recent-posts.html"></a>Recent Posts</li>
+				</ul>
+			</nav>
+		</header>
+		
 		<div class="container">
 			<h1>Let's start <span class="text-accent">getting a little</span> more fancy!</h1>
 			<img class="elephants" src="neil-and-zulma-scott-hjv3VO-jpnc-unsplash.jpg" alt="Elephants crossing a dirt road in the desert">
