--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 	<body>
 		<header>
-			<div>
+			<div class="header">
 				<h2>Living the simple life</h2>
 				<p>A blog exploring minimalism in life</p>
 			</div>
@@ -24,7 +24,7 @@
 				</ul>
 			</nav>
 		</header>
-		
+
 		<div class="container">
 			<h1>Let's start <span class="text-accent">getting a little</span> more fancy!</h1>
 			<img class="elephants" src="neil-and-zulma-scott-hjv3VO-jpnc-unsplash.jpg" alt="Elephants crossing a dirt road in the desert">
