--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
 
 			<nav>
 				<ul>
-					<li><a class="text-accent" href="home.html"></a>Home</li>
-					<li><a class="text-accent" href="about.html"></a>About</li>
-					<li><a class="text-accent" href="recent-posts.html"></a>Recent Posts</li>
+					<li><a href="home.html"></a>Home</li>
+					<li><a href="about.html"></a>About</li>
+					<li><a href="recent-posts.html"></a>Recent Posts</li>
 				</ul>
 			</nav>
 		</header>
